idea/testData/checker/regression/ClassDeclarationAsExpression2.kt
fun g() = 1 < <error descr="[DECLARATION_IN_ILLEGAL_CONTEXT] Declarations are not allowed in this position">class A</error>